# atmel-adc-and-slcan

./: .gitattributes  .gitignore  .gitmodules  README.md  activate_fh  openocd_samc21.conf
src/: CMakeLists.txt  Makefile  config.mk  main.c  sw_version.inc
src/canbus/: LICENSE.txt  main.eep  main.h  sja1000.h  usb.c  usb.h
src/config/: FreeRTOSConfig.h  asf.h  cerbo_gx_slcan_adc.h  conf_can.h  conf_clocks.h  custom_board.h  custom_board_template.h  samc21_slcan_adc.h  samc21_usbcan.h  samc21_xplained_pro.h
src/linker_script/: samc21g17a_flash_victron.ld
src/tasks/: adc_methods.c  adc_methods.h  adc_task.c  adc_task.h  can_methods.c  can_methods.h  can_task.c  can_task.h  i2c_vitual_eeprom.c  i2c_vitual_eeprom.h  slcan.h  stack_task.c  stack_task.h  uart_commands.c  uart_commands.h  uart_methods.c  uart_methods.h
src/utils/: board_setup.c  board_setup.h  comm_interface_setup.c  comm_interface_setup.h  control_leds.c  control_leds.h  uart_setup.c  uart_setup.h
unused/canbus/: main.c  sja1000.c
